2008-04-07  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala: fix element access
	  assignment with pointers, fixes bug 519933

	* tests/pointers.vala: test pointer element access

2008-04-06  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: fix gtk_tree_sortable_get_sort_column_id
	  binding, fixes bug 526410

	* vapi/gtk+-2.0.vapi: regenerated

2008-04-06  Jürg Billeter  <j@bitron.ch>

	* vala/valapointertype.vala,
	  gobject/valaccodeassignmentbinding.vala: fix crash when using
	  pointers in parameters of D-Bus signals, fixes bug 526111

2008-04-06  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorinvocationexpression.vala: fix crash
	  when using string arrays in parameters of D-Bus methods,
	  fixes bug 525166

2008-04-06  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorclass.vala,
	  gobject/valaccodegeneratorinterface.vala,
	  gobject/valaccodegeneratorsourcefile.vala,
	  gobject/valaccodegeneratorstruct.vala:

	  Add source_type_declaration and source_type_definition code
	  fragments to fix declaration order in generated C source files

2008-03-31  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/parser.y, vala/vala.h,
	  vala/valaattribute.vala, vala/valabooleanliteral.vala,
	  vala/valacharacterliteral.vala, vala/valacodecontext.vala,
	  vala/valacodegenerator.vala, vala/valacodevisitor.vala,
	  vala/valaintegerliteral.vala, vala/valaliteral.vala,
	  vala/valanullliteral.vala, vala/valarealliteral.vala,
	  vala/valasemanticanalyzer.vala, vala/valastringliteral.vala,
	  gobject/valaccodeelementaccessbinding.vala,
	  gobject/valaccodegenerator.vala:

	  Merge Literal and LiteralExpression

2008-03-31  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: fix output of enums with methods

2008-03-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: enhance support for pointer
	  arithmetic

2008-03-29  Jürg Billeter  <j@bitron.ch>
